
option ('doc', type : 'feature', value : 'disabled',
    description : 'Build documentation [default: auto]')

option ('test', type: 'feature', value: 'auto',
    description: 'Build tests [default: auto]')
option ('demo', type: 'feature', value: 'disabled',
    description: 'Build UI widgets demo')

option ('bindings', type: 'feature', value: 'disabled',
    description: 'Build Lua bindings [default: disabled]')
option ('luadir', type: 'string', value: 'auto',
    description: 'Lua base path for text modules')
option ('luadir_c', type: 'string', value: 'auto',
    description: 'Lua base path for binary modules')
